kubernetes/base/apps/self-hosted/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  labels:
    app.kubernetes.io/name: searxng
  annotations:
    gethomepage.dev/description: Free metasearch engine
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Projects
    gethomepage.dev/icon: sh-searxng-light
    gethomepage.dev/name: SearXNG
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: search.internal
spec:
  tls:
    - hosts:
        - search.internal
      secretName: searxng-ing-cert
  ingressClassName: nginx
  rules:
    - host: "search.internal"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
